[CHANGE] message toasts location and fixes not working word wrapping in the profiles (#741)

--- a/pandora-client-web/src/components/profileScreens/profileScreens.scss
+++ b/pandora-client-web/src/components/profileScreens/profileScreens.scss
@@ -4,7 +4,6 @@
 	display: flex;
 	padding: 0.5em !important;
 	overflow-y: hidden;
-
 }
 
 .profileView {
@@ -55,6 +54,17 @@
 		border: 1px solid black;
 		font-family: Arial, Helvetica, sans-serif;
 		white-space: pre-wrap;
+		word-wrap: break-word;
+		word-break: break-word;
+
+		a {
+			color: $theme-link-light;
+			text-decoration: underline;
+
+			&:hover {
+				color: $grey-light;
+			}
+		}
 	}
 
 	.profileEdit {
